--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@
     display: inline;
     border: #f6f5f2 solid 4px;
 }
-#header a{
+
+#header a {
     color: black;
     padding: 5px 10px;
     text-decoration: none;
@@ -20,6 +21,10 @@
     font-family: Ubuntu;
     display: inline-block;
     width: 333px;
+}
+
+#mainTable {
+    border: #f6f5f2 solid 4px;
 }
 
 .loginForm {
